tests/build/cases/impl_ui_node/invalid_delegate_iter_pair.stderr
error: expected `, delegate_iter_mut = <expr>`
 --> cases/impl_ui_node/invalid_delegate_iter_pair.rs:6:47
  |
6 | #[impl_ui_node(delegate_iter = self.inner.iter())]
  |                                               ^^

error: expected `, delegate_iter = <expr>`
  --> cases/impl_ui_node/invalid_delegate_iter_pair.rs:12:55
   |
12 | #[impl_ui_node(delegate_iter_mut = self.inner.iter_mut())]
   |                                                       ^^

warning: unused import: `UiNode`
 --> cases/impl_ui_node/invalid_delegate_iter_pair.rs:1:55
  |
1 | use zero_ui::core::{impl_ui_node, ui_list::WidgetVec, UiNode};
  |                                                       ^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
